--- a/client/observatory.html
+++ b/client/observatory.html
@@ -14,7 +14,7 @@
 <!-- help tab -->
       <div id="id_help_tab" class="tab-pane" style="height:100%;">
         <div class="lb_scrollable">
-        <p>For details, please see <a href="https://github.com/jhoxray/observatory">Observatory web page</a>. This is version 0.1.5.
+        <p>For details, please see <a href="http://observatory.meteor.com/">Observatory web page</a>. This is version 0.1.7.
         This package provides
                 powerful logging, inspection and monitoring for your <a href="http://meteor.com">Meteor framework</a> applications. 
                 Observatory panel is controlled by pressing the "O!" button in the bottom-left corner of the page: you can have it small, medium,
