added remove logs button, fixed tab hiding when clicking in a wrong place

--- a/client/observatory.html
+++ b/client/observatory.html
@@ -9,6 +9,7 @@
         <li><a href="#id_app_tab" id="id_app_tab_btn">Application Internals</a></li>
         <li><a href="#id_help_tab" id="id_help_tab_btn">Help</a></li>
         <li><button class="btn btn-mini btn-info" type="button" id="lb_btn_change_theme">change theme</button></li>
+        <li><button class="btn btn-danger btn-mini" id="lb_btn_clear_logs" type="button">clear logs</button></li>
       </ul>
 
 <!-- help tab -->
