--- a/client/simpleTests.html
+++ b/client/simpleTests.html
@@ -1,4 +1,5 @@
 <template name="simple_tests">
+    <button class="btn btn-large btn-primary" type="button" id="runMTests">Run Tests</button>
     <table class="table">
         <tbody>
         {{#each testResults}}
