--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -2,7 +2,7 @@
   <div class="{{theme}}"><!-- theming support -->
 
 
-      <div id="id_logs_bootstrap" {{#if isDynamic}}class="observatory_panel {{height}}"{{else}}class="observatory_panel_static"{{/if}}>
+      <div id="id_logs_bootstrap" {{#if isDynamic}}class="observatory_panel {{height}}"{{else}}class="observatory_panel_static  {{#if isHidden}}lb_hidden{{/if}}"{{/if}}>
 
   {{#if fullFeatured}}
   <ul class="nav nav-tabs" id="lb_main_tab">
