put tests into common panel, made 25% panel default

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -99,11 +99,7 @@
 <!-- application internals tab -->
       <div id="id_templates_tab" class="tab-pane" style="height: 100%;" >
         
-          <!-- session -->
-      <div class="lb_scrollable" id="id_session_div">
-
-        </div>
-
+          {{> simple_tests}}
       </div>
   {{/if}}
 <!-- logs tab tab -->
