--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -18,7 +18,7 @@
 <!-- help tab -->
       <div id="id_help_tab" class="tab-pane" style="height:100%;">
         <div class="lb_scrollable">
-        <p>For details, please see <a href="http://observatory.meteor.com/">Observatory web page</a>. This is version 0.1.8.
+        <p>For details, please see <a href="http://observatoryjs.com/">Observatory web page</a>. This is version 0.1.9.
         This package provides
                 powerful logging, inspection and monitoring for your <a href="http://meteor.com">Meteor framework</a> applications. 
                 Observatory panel is controlled by pressing the "O!" button in the bottom-left corner of the page: you can have it small, medium,
@@ -34,6 +34,7 @@
                   Simply call <code>TL = TLog.getLogger(TLog.LOGLEVEL_MAX,true)</code> once in your app's common
                 code (that gets executed on both client and server) and then call the following obvious methods:
                 <code>TL.fatal("..."), error, warn, info, verbose</code>. Your logs will be updated automatically in the "Log" tab.
+                    Full API and options is described <a href="https://github.com/jhoxray/observatory">on gitub</a>.
                 </p>
               </div>
 
