--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -88,7 +88,7 @@
 
         <div class="lb_console" class="lb_scrollable">
           <div class="lb_scrollable" style="height: 90%; overflow: scroll;">
-          <pre id="lb_code_console" class="prettyprint">
+          <pre id="lb_code_console">
           &nbsp;
           </pre>
           </div>
