added prism as a prettifier

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -86,11 +86,11 @@
           </table>
         </div>
 
-        <div class="lb_console" class="lb_scrollable">
+        <div class="lb_console lb_scrollable">
           <div class="lb_scrollable" style="height: 90%; overflow: scroll;">
-          <pre id="lb_code_console">
+          <pre id="lb_code_console"><code class="language-javascript">
           &nbsp;
-          </pre>
+          </code></pre>
           </div>
         </div>
 
