got highlighting working with codemirror

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -45,7 +45,7 @@
         
         <!-- template -->
       <div class="lb_scrollable" id="id_templates_div">
-          <a href="#tableTemplates">Templates &amp; Events</a>
+          <a href="#tableTemplates">Templates &amp; Events !!!</a>
           <a href="#tableSession">Session</a>
 
          <table class="table table-condensed" id="tableTemplates">
@@ -87,10 +87,8 @@
         </div>
 
         <div class="lb_console lb_scrollable">
-          <div class="lb_scrollable" style="height: 90%; overflow: scroll;">
-          <pre id="lb_code_console"><code class="language-javascript">
-          &nbsp;
-          </code></pre>
+          <div class="lb_scrollable" style="height: 90%; overflow: scroll;" id="lb_code_console">
+
           </div>
         </div>
 
