fixed visibility issue by some magic

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -124,13 +124,11 @@
             </table>
         </div>
 
-        <div class="lb_console lb_scrollable">
-            <div class="lb_scrollable" style="height: 90%; overflow: scroll;" id="lb_code_console">
-
-            </div>
+        <div id="lb_code_console">
         </div>
-
     </div>
+
+
 </template>
 
 
