--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -1,10 +1,10 @@
 <template name="logs_bootstrap">
-    <div class="{{theme}}"><!-- theming support -->
+    <div class="{{theme}}" id="lb_id_containing_box"><!-- theming support -->
         <div id="id_logs_bootstrap" {{#if isDynamic}}class="observatory_panel {{height}}"{{else}}class="observatory_panel_static  {{#if isHidden}}lb_hidden{{/if}}"{{/if}}>
               {{#if fullFeatured}}
               <ul class="nav nav-tabs" id="lb_main_tab">
                     <li><a href="#" data-target="observatoryjsLogsTab" id="id_logs_tab_btn">Logs</a></li>
-                    <li><a href="#" data-target="observatoryjsInternalsTab" id="id_app_tab_btn">Application Internals</a></li>
+                    <li><a href="#" data-target="observatoryjsInternalsTab" id="id_app_tab_btn">Templates Inspection</a></li>
                     <!-- <li><a href="#id_templates_tab" id="id_templates_tab_btn">Tests</a></li> -->
                     <!-- <li><a href="#" data-target="observatoryjsLogsSimple" id="id_export_tab_btn">Export</a></li> -->
                     <li><a href="#" data-target="observatoryjsHelpTab" id="id_help_tab_btn">Help</a></li>
@@ -16,7 +16,11 @@
         {{{observatoryjsRenderCurrent}}}
         </div>
         <a class="observatory_trigger" href="#" id="btn_toggle_logs">O!</a>
+        <a class="observatory_trigger" href="#" id="btn_toggle_session">S!</a>
     </div>
+
+        {{>observatoryjsSession}}
+
 </template>
 
 
@@ -119,21 +123,25 @@
 
 
 <template name="observatoryjsSession">
-    <table class="table table-condensed" id="tableSession">
-        <thead>
-        <tr>
+    <div id="lb_session_popup">
+        <table class="table table-condensed" id="tableSession" style="margin: 6px 6px 6px 6px">
+            <thead>
+            <tr><th>Session</th></tr>
+            </thead>
 
-            <th colspan="2"><a href="#">Session</a></th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each session_keys}}
-        <tr class="no_border">
-            <td class="no_border lb_yellow">{{key}}:</td><td class="no_border">{{value}}</td>
-        </tr>
-        {{/each}}
-        </tbody>
-    </table>
+            <tbody>
+            {{#each session_keys}}
+            <tr class="" style="padding: 0; margin: 0">
+                <th class="" style="padding: 0; margin: 0">{{key}}:</th>
+            </tr>
+            <tr class="" style="padding: 0; margin: 0">
+                <td class="" style="padding: 0; margin: 0">{{value}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+
+    </div>
 </template>
 
 
