--- a/testing/client/simpleTests.html
+++ b/testing/client/simpleTests.html
@@ -3,11 +3,11 @@
     <button class="btn btn-large" type="button" id="runMTests">Run Client Tests</button>
     <button class="btn btn-large btn-inverse" type="button" id="runServerMTests">Run Server Tests</button>
     </p>
-    <table class="table">
+    <table class="table observatory_test_result_table">
         <tbody>
         {{#each testServerResults}}
         {{#if success}}
-        <tr style="background-color: #f5f5f5;">
+        <tr>
             <td colspan="4">
                 <h4>{{suiteName}}</h4>
                 <p>
@@ -18,7 +18,7 @@
             </td>
         </tr>
         {{else}}
-        <tr style="background-color: #f5f5f5;">
+        <tr>
             <td colspan="4">
                 <h4>{{suiteName}} - execution failed</h4>
                 <p class="text-error">
@@ -32,7 +32,7 @@
             <td style="width: 40px"><span class="label label-inverse">server</span></td>
             <td style="width: 500px;"><span class="{{testResultClass1 passed}}">{{name}}</span></td>
             <td style="width:50px;"><span class="{{testResultClass1 passed}}">{{testResultPassed passed}}</span></td>
-            <td><em><span style="color: #777;">{{message}}</span></em></td>
+            <td><em><span>{{message}}</span></em></td>
         </tr>
         {{/each}}
         {{/each}}
@@ -43,7 +43,7 @@
         <tbody>
         {{#each testResults}}
         {{#if success}}
-        <tr style="background-color: #f5f5f5;">
+        <tr>
             <td colspan="4">
                 <h4>{{suiteName}}</h4>
                 <p>
@@ -54,7 +54,7 @@
             </td>
         </tr>
         {{else}}
-        <tr style="background-color: #f5f5f5;">
+        <tr>
             <td colspan="4">
                 <h4>{{suiteName}} - execution failed</h4>
                 <p class="text-error">
