--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -125,7 +125,8 @@
 
 
 <template name="observatoryjsSession">
-    <div id="lb_session_popup">
+    <div class="{{theme}}">
+    <div id="lb_session_popup" class="{{sessionWidth}}">
         <table class="table table-condensed" id="tableSession" style="margin: 6px 6px 6px 6px">
             <thead>
             <tr><th>Session</th></tr>
@@ -133,7 +134,7 @@
 
             <tbody>
             {{#each session_keys}}
-            <tr class="" style="padding: 0; margin: 0">
+            <tr class="sessionKey" style="padding: 0; margin: 0">
                 <th class="" style="padding: 0; margin: 0">{{key}}:</th>
             </tr>
             <tr class="" style="padding: 0; margin: 0">
@@ -143,6 +144,7 @@
             </tbody>
         </table>
 
+    </div>
     </div>
 </template>
 
