Module UI change

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -53,7 +53,7 @@
                     {{/if}}
                     <td class="lb_module">
                         {{#if module}}
-                        <span class="label">{{module}}</span>
+                        <span class="label label-info">{{module}}</span>
                         {{/if}}
                     </td>
                     <td class="lb_loglevel"><span class="label {{lb_loglevel_decoration}}">{{loglevel_names loglevel}}</span></td>
