starting work on collection monitoring

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -138,6 +138,11 @@
                 </tr>
                 </tbody>
             </table>
+            <div>
+                {{#each getSession "observatoryjs.CurrentSubscriptions"}}
+                {{name}}: {{inactive}}: {{ready}} <br/>
+                {{/each}}
+            </div>
         </div>
 
         <div id="lb_code_console">
