showing ip address in the panel if available

--- a/logging/client/observatory.html
+++ b/logging/client/observatory.html
@@ -67,7 +67,7 @@
                 {{#each log_messages}}
                 <tr class="{{lb_loglevel_row_decoration}} no_border">
                     <td class="lb_timestamp">{{format_timestamp timestamp}}</td>
-                    <td class="lb_user">{{getUser uid}}</td>
+                    <td class="lb_user">{{getUser this}}</td>
                     {{#if isServer}}
                     <td class="lb_server"><span class="label label-inverse">server</span></td>
                     {{else}}
