It's showing a function content now

--- a/mars/observatory.html
+++ b/mars/observatory.html
@@ -194,7 +194,7 @@
             {{/each}}
           </table>
         </div>
-        <div class="oi_property_view">
+        <div id="oi_property_view">
         </div>
       </div>     
     </div>
