Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Observatory by jhoxray</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Observatory</h1>
-        <h2>Powerful, yet easy to use, logging and monitoring package for Meteor framework. </h2>
+        <p>Powerful, yet easy to use, logging and monitoring package for Meteor framework. </p>
 
-        <section id="downloads">
-          <a href="https://github.com/jhoxray/observatory/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/jhoxray/observatory/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/jhoxray/observatory" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="view"><a href="https://github.com/jhoxray/observatory">View the Project on GitHub <small>jhoxray/observatory</small></a></p>
 
-    <div class="container">
-      <section id="main_content">
+
+        <ul>
+          <li><a href="https://github.com/jhoxray/observatory/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jhoxray/observatory/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jhoxray/observatory">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h2>
 <a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h2>
 
@@ -276,8 +276,12 @@ are the same as Twitter Bootstrap is using you may get weird effects in your app
 
 <p>Initial commit </p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/jhoxray">jhoxray</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
